--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body
 #game
 {
 	touch-action: none; /* Without it, touch dragging would be reset after a few moments by browser */
-	fill: white;
+	fill: black;
 	font-family: sans-serif;
 	font-size: 100%;
 }
@@ -46,7 +46,7 @@ body
 
 #log
 {
-	color: white;
+	color: black;
 	position: absolute;
 	font-family: Consolas;
 }
