Intro text and tutorial

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,9 +1,18 @@
+/* Disable blue highlight of clickable elements on Android */
+* {
+    -webkit-tap-highlight-color: transparent;
+    
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
 .ignoreCursor
 {
 	pointer-events: none;
 }
 
-/* Disable blue highlight of clickable elements on Android */
-* {
-    -webkit-tap-highlight-color: transparent;
+.hidden
+{
+	display: none;
 }
