--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,52 @@ body, html
 body
 {
 	color: black;
-	background-color: #EFEBE0;
+	background-color: rgb(239, 235, 224);
 	overflow: hidden; /* Hide scrollbars */
+}
+
+#messageArea
+{
+	background-color: rgba(239, 235, 224, 0.5);
+}
+
+#messageBox
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 20px;
+	background-color: rgb(119, 114, 100);
+	font-family: "Roboto Slab", sans-serif;
+	color: white;
+	text-align: center;
+}
+
+#messageBox p
+{
+	margin: 0.2em;
+}
+
+#messageBox button
+{
+	margin-top: 0.4em;
+	padding: 0.2em 1em 0.2em 1em;
+	font-family: Nunito, sans-serif;
+	font-size: 200%;
+	font-weight: bold;
+	color: rgb(119, 114, 100);
+}
+
+#tier0_sex
+{
+	font-size: 300%;
+	font-weight: bold;
+	cursor: pointer;
+}
+.tier0_large
+{
+	font-size: 150%;
 }
 
 #log
@@ -25,13 +69,15 @@ body
 	font-size: 150%;
 	color: red;
 	text-align: center;
-	width: 100%;
 	pointer-events: none;
+	padding-top: 0.5em;
 }
 
-.svgObject
+.fullScreen
 {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	left: 0;
+	top: 0;
 }
