--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@ body
 	color: black;
 	background-color: rgb(239, 235, 224);
 	overflow: hidden; /* Hide scrollbars */
+	overscroll-behavior-y: contain !important; /* https://stackoverflow.com/questions/24081699/why-onbeforeunload-event-is-not-firing */
 }
 
 #loading
