--- a/styles/game.css
+++ b/styles/game.css
@@ -57,8 +57,29 @@
 	pointer-events: none;
 }
 
-.text
+.textTitle
 {
 	font-family: "Roboto Slab", sans-serif;
 	font-size: 18px;
+}
+
+.textNote
+{
+	font-family: "Caveat", serif;
+	font-size: 28px;
+}
+
+.textTutorial
+{
+	font-family: "Roboto Slab", sans-serif;
+	font-size: 18px;
+	font-style: italic;
+}
+
+#note0, #note1, #note2, #note3, #note4, #note5
+{
+	background-color: black;
+	width: 100%;
+	height: 100%;
+	fill: blue;
 }
