--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,11 @@ body, html
 body
 {
 	color: black;
-	background-color: rgb(249,229,192);
+	/* background-color: rgb(249,229,192); */
+	background: rgb(241,212,180);
+	background: radial-gradient(circle, rgba(241,212,180,1) 0%, rgba(158,133,105,1) 100%);
+	/* background: rgb(239,235,224);
+	background: radial-gradient(circle, #F1D4B4 0%, #334B4D 100%); */
 	overflow: hidden; /* Hide scrollbars */
 	overscroll-behavior-y: contain !important; /* https://stackoverflow.com/questions/24081699/why-onbeforeunload-event-is-not-firing */
 }
@@ -19,11 +23,11 @@ body
 {
 	position: absolute;
 	left: 50%;
-	top: 55%;
+	top: 65%;
 	transform: translate(-50%, -50%);
 	width: 300px;
 	height: 280px;
-	background-color: rgba(239, 235, 224, 0.8);
+	/* background-color: #efebe0cc; */
 }
 #loadingText
 {
