--- a/styles/game.css
+++ b/styles/game.css
@@ -47,7 +47,12 @@
 	cursor: not-allowed;
 }
 
-.tileNumber
+#tilePicture
+{
+	pointer-events: none;
+}
+
+#tileNumber
 {
 	fill: red;
 	font-weight: 800;
@@ -82,4 +87,54 @@
 	width: 100%;
 	height: 100%;
 	fill: blue;
+}
+
+.animateTileConfirmed
+{
+	animation: 0.5s animateTileConfirm ease 1;
+}
+@keyframes animateTileConfirm {
+	0% {
+		animation-timing-function: ease-in;
+		opacity: 1;
+		transform: translate(-128px, calc(-24px - 128px));
+	}
+
+	24% {
+		opacity: 1;
+	}
+
+	40% {
+		animation-timing-function: ease-in;
+		transform: translate(-128px, calc(-16px - 128px));
+	}
+
+	65% {
+		animation-timing-function: ease-in;
+		transform: translate(-128px, calc(-8px - 128px));
+	}
+
+	82% {
+		animation-timing-function: ease-in;
+		transform: translate(-128px, calc(-4px - 128px));
+	}
+
+	93% {
+		animation-timing-function: ease-in;
+		transform: translate(-128px, calc(-2px - 128px));
+	}
+
+	25%,
+	55%,
+	75%,
+	87% {
+		animation-timing-function: ease-out;
+		transform: translate(-128px, calc(0px - 128px));
+	}
+
+	100% {
+		animation-timing-function: ease-out;
+		opacity: 1;
+		transform: translate(-128px, calc(0px - 128px));
+	}
 }
