--- a/styles/game.css
+++ b/styles/game.css
@@ -151,3 +151,42 @@
 		transform: translate(-128px, calc(0px - 128px));
 	}
 }
+
+.animateFadeIn
+{
+	fill-opacity: 0;
+	animation-name: animateFadeIn;
+	animation-delay: 1.5s; 
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
+}
+@keyframes animateFadeIn {
+    0% {
+        fill-opacity: 0;
+    }
+	
+    100% {
+        fill-opacity: 1;
+    }
+}
+
+.animateFadeOut
+{
+	fill-opacity: 1;
+	animation-name: animateFadeOut;
+	animation-duration: 0.2s;
+	animation-iteration-count: 1;
+	animation-timing-function: ease;
+	animation-fill-mode: forwards;
+}
+@keyframes animateFadeOut {
+    0% {
+        fill-opacity: 1;
+    }
+	
+    100% {
+        fill-opacity: 0;
+    }
+}
