--- a/styles/main.css
+++ b/styles/main.css
@@ -35,14 +35,14 @@ body
 	font-size: 160%;
 	font-family: "Roboto Slab", sans-serif;
 	text-align: center;
-	color: #4E8257;
+	color: rgb(108, 66, 131);
 }
 /* https://www.w3schools.com/howto/howto_css_loader.asp */
 #loadingSpinner
 {
 	margin: auto;
-	border: 16px solid #A1CECC;
-	border-top: 16px solid #4E8257;
+	border: 16px solid rgb(10,22,48);
+	border-top: 16px solid rgb(108, 66, 131);
 	border-radius: 50%;
 	width: 60px;
 	height: 60px;
@@ -113,6 +113,7 @@ body
 #note2
 {
 	width: min(500px, 80%);
+	max-height: 35%;
 
 	position: absolute;
 	left: 50%;
@@ -130,8 +131,8 @@ body
 	pointer-events: none;
 }
 
-#note2:before /* https://codepen.io/run-time/pen/VNRBJd */
-{
+/* #note2:before /* https://codepen.io/run-time/pen/VNRBJd */
+/* {
 	content: "";
 	position: absolute;
 	border-left: 30px solid white;
@@ -140,7 +141,7 @@ body
 	border-top: 30px solid transparent;
 	left: 60%;
 	top: -48px;
-}
+} */
 
 #log, #pos
 {
@@ -151,7 +152,7 @@ body
 }
 #pos
 {
-	bottom: 40px;
+	bottom: 10px;
 }
 
 #disclaimer
