--- a/styles/game.css
+++ b/styles/game.css
@@ -80,26 +80,8 @@
 .textTutorial
 {
 	font-family: "Roboto Slab", sans-serif;
-	font-size: 18px;
+	font-size: 200%;
 	font-style: italic;
-}
-
-#note
-{
-	overflow: visible;
-	pointer-events: none;
-}
-
-#note rect, #note polygon
-{
-	fill: black;
-}
-
-#note text
-{
-	font-family: "Caveat", serif;
-	font-size: 32px;
-	fill: white;
 }
 
 .animateTileConfirmed
@@ -155,34 +137,6 @@
 		opacity: 1;
 		transform: translate(-128px, calc(0px - 128px));
 	}
-}
-
-.animateFadeIn
-{
-	animation-name: animateFadeIn;
-	animation-delay: 1.5s; 
-	animation-duration: 1s;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-fill-mode: forwards;
-}
-.animateFadeOut
-{
-	animation-name: animateFadeIn;
-	animation-duration: 0.2s;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-fill-mode: forwards;
-	animation-direction: reverse;
-}
-@keyframes animateFadeIn {
-    0% {
-        fill-opacity: 0;
-    }
-	
-    100% {
-        fill-opacity: 1;
-    }
 }
 
 .animateHeartIn
@@ -273,16 +227,23 @@
     }
 }
 
-.animateTutorialTarget
+.tutorialTarget
 {
-	fill: rgb(207, 119, 255);
+	fill: rgba(207, 119, 255);
+	fill-opacity: 0.05;
+
 	stroke: rgb(207, 119, 255);
 	stroke-width: 0.04;
-
+	stroke-opacity: 0.3;
+}
+.animateTutorialTarget
+{
 	animation-name: animateTutorialTarget;
 	animation-duration: 1.5s;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease-out;
+
+	transform-origin: 0.025% 0.045%;
 }
 @keyframes animateTutorialTarget {
     0% {
@@ -292,7 +253,7 @@
     }
 	
     100% {
-        transform: scale(1.2);
+        transform: scale(1.4);
 		fill-opacity: 0;
 		stroke-opacity: 0;
     }
