Added highlight of current tile

--- a/styles/game.css
+++ b/styles/game.css
@@ -6,152 +6,6 @@
 	font-size: 100%;
 }
 
-#tiles
-{
-	overflow: visible;
-}
-
-.gameStateDefault
-{
-	cursor: default;
-}
-
-.gameStateMove
-{
-	cursor: move;
-}
-
-.tile, .tileHidden
-{
-	overflow: visible;
-}
-
-.tileHiddenx
-{
-	display: none;
-}
-
-.tileCurrent
-{
-	filter: drop-shadow(0 0 20px white);
-}
-
-#tileArea
-{
-	fill: rgba(0, 255, 0, 0);
-	stroke: none;
-}
-
-.tileStateEditable
-{
-	cursor: grab;
-}
-
-.tileStateEditing
-{
-	cursor: grabbing;
-}
-
-.tileStateConfirmed
-{
-	cursor: not-allowed;
-}
-
-#tilePicture
-{
-	pointer-events: none;
-}
-
-#tileNumber
-{
-	fill: red;
-	font-weight: 800;
-	font-size: 80px;
-	stroke: white;
-    stroke-width: 2px;
-	pointer-events: none;
-	display: none;
-}
-
-#outro
-{
-	font-family: "Roboto Slab", sans-serif;
-	font-size: 250px;
-	filter: drop-shadow(0 0 20px rgb(108, 66, 131));
-	opacity: 0;
-}
-
-.textTutorial
-{
-	font-family: "Roboto Slab", sans-serif;
-	font-size: 200%;
-	font-style: italic;
-}
-
-.animateTileConfirmed
-{
-	animation-name: animateTileConfirm;
-	/* animation-delay: 0.07s; */
-	animation-duration: 0.5s;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-fill-mode: forwards;
-}
-@keyframes animateTileConfirm
-{
-	0%
-	{
-		animation-timing-function: ease-in;
-		opacity: 1;
-		transform: translate(-128px, calc(-24px - 128px));
-	}
-
-	24%
-	{
-		opacity: 1;
-	}
-
-	40%
-	{
-		animation-timing-function: ease-in;
-		transform: translate(-128px, calc(-16px - 128px));
-	}
-
-	65%
-	{
-		animation-timing-function: ease-in;
-		transform: translate(-128px, calc(-8px - 128px));
-	}
-
-	82%
-	{
-		animation-timing-function: ease-in;
-		transform: translate(-128px, calc(-4px - 128px));
-	}
-
-	93%
-	{
-		animation-timing-function: ease-in;
-		transform: translate(-128px, calc(-2px - 128px));
-	}
-
-	25%,
-	55%,
-	75%,
-	87%
-	{
-		animation-timing-function: ease-out;
-		transform: translate(-128px, calc(0px - 128px));
-	}
-
-	100%
-	{
-		animation-timing-function: ease-out;
-		opacity: 1;
-		transform: translate(-128px, calc(0px - 128px));
-	}
-}
-
 .animateHeartIn
 {
 	animation-name: animateHeart, animateHeartBeat;
@@ -256,7 +110,7 @@
 
 .tutorialTarget
 {
-	fill: rgba(207, 119, 255);
+	fill: rgb(207, 119, 255);
 	fill-opacity: 0.05;
 
 	stroke: rgb(207, 119, 255);
