--- a/styles/intro.css
+++ b/styles/intro.css
@@ -75,8 +75,8 @@
 	font-family: "Roboto Slab", sans-serif;
 	text-align: center;
 	color: black;
-	background-color: darkorange;
-	border: 1px solid black;
+	background-color: orange;
+	border: 2px dashed black;
 }
 
 #loading
