--- a/styles/stars.css
+++ b/styles/stars.css
@@ -13,6 +13,17 @@
 	opacity: 1;
 }
 
+#sky object
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
 #haze
 {
 	position: absolute;
@@ -24,29 +35,32 @@
 	background: linear-gradient(rgba(0,0,0,0) 33%, rgb(108, 66, 131) 100%);
 }
 
-.stars {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+.stars
+{
 	animation: twinkle var(--twinkle-duration) ease-in-out infinite;
-
-	&:nth-child(2) {
-		animation-delay: calc(var(--twinkle-duration) * -0.33);
-	}
-	&:nth-child(3) {
-		animation-delay: calc(var(--twinkle-duration) * -0.66);
-	}
+}
+.stars1
+{
+	animation-delay: 0;
+}
+.stars2
+{
+	animation-delay: calc(var(--twinkle-duration) * -0.33);
+}
+.stars3
+{
+	animation-delay: calc(var(--twinkle-duration) * -0.66);
 }
 
-@keyframes twinkle {
+@keyframes twinkle
+{
     50% {
-        opacity: 0.5;
+        opacity: 0.05;
     }
 }
 
-.star {
+.stars circle
+{
 	fill: white;
 
 	&:nth-child(3n) {
