--- a/styles/outro.css
+++ b/styles/outro.css
@@ -1,3 +1,7 @@
+:root {
+	--outro-zoom-out: 0;
+}
+
 #outroBox
 {
 	position: absolute;
@@ -8,7 +12,7 @@
 
 	color: white;
 	text-align: center;
-    opacity: 0;
+	opacity: 0;
 }
 
 #outroBox p
@@ -21,32 +25,94 @@
     margin-top: 20vh;
 	font-family: "Roboto Slab", sans-serif;
 	font-size: 10vh;
+	animation: animateName 6s var(--outro-zoom-out) ease forwards;
 }
 
 .animateOutroIn
 {
-	animation-name: animateOutro;
-	animation-delay: 4.5s; 
-	animation-duration: 1.5s;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-fill-mode: forwards;
+	animation: animateOutroIn 1.5s var(--outro-zoom-out) ease forwards;
 }
 .animateOutroOut
 {
-	animation-name: animateOutro;
-	animation-duration: 0.2s;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-fill-mode: forwards;
-	animation-direction: reverse;
+	animation: animateOutroOut 0.2s ease forwards;
 }
-@keyframes animateOutro {
-    0% {
+@keyframes animateOutroIn {
+    0%
+	{
         opacity: 0;
     }
 	
-    100% {
+    100%
+	{
         opacity: 1;
+    }
+}
+@keyframes animateOutroOut {
+    0%
+	{
+        opacity: 1;
+    }
+	
+    100%
+	{
+        opacity: 0;
+    }
+}
+
+@keyframes animateName {
+    0%
+	{
+        letter-spacing: normal;
+    }
+	
+    100%
+	{
+        letter-spacing: 0.4em;
+    }
+}
+.animateHeartIn
+{
+	animation-name: animateHeart, animateHeartBeat;
+	animation-delay: calc(var(--outro-zoom-out) - 1s), var(--outro-zoom-out); 
+	animation-duration: 0.5s, 1s;
+	animation-iteration-count: 1, infinite;
+	animation-timing-function: ease, ease;
+	animation-fill-mode: forwards, none;
+}
+.animateHeartOut
+{
+	animation-name: animateHeart;
+	animation-delay: 0;
+	animation-duration: 1s;
+	animation-iteration-count: 1;
+	animation-direction: reverse;
+	animation-fill-mode: none;
+}
+@keyframes animateHeart {
+    0%
+	{
+		filter: invert(0) sepia(0) saturate(1) hue-rotate(0);
+    }
+
+    50%
+	{
+		filter: invert(0.5) sepia(1) saturate(1) hue-rotate(-20deg);
+    }
+	
+    100%
+	{
+		filter: invert(0.5) sepia(1) saturate(50) hue-rotate(-20deg) drop-shadow(0 0 40px rgba(255, 0, 0, 0.5));
+    }
+}
+
+@keyframes animateHeartBeat {
+    0%, 30%, 60%, 100%
+	{
+		transform: scale(1);
+    }
+	
+    15%, 45%
+	{
+		transform: scale(1.01);
     }
 }
