--- a/styles/common.css
+++ b/styles/common.css
@@ -16,3 +16,15 @@
 {
 	display: none;
 }
+
+@keyframes animFadeIn
+{
+	0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+@keyframes animFadeOut
+{
+	0% {opacity: 1;}
+    100% {opacity: 0;}
+}
