--- a/styles/note.css
+++ b/styles/note.css
@@ -40,15 +40,13 @@
 .animateNoteIn
 {
 	opacity: 0;
-	animation-name: animateNoteIn;
+	animation-name: animFadeIn;
 	animation-duration: 1s;
 	animation-delay: 1.5s; 
 }
 .animateNoteOut
 {
 	opacity: 1;
-	animation-name: animateNoteOut; /* Simply reverting "in" animation does't work */
+	animation-name: animFadeOut; /* Simply reverting "in" animation does't work */
 	animation-duration: 0.2s;
 }
-@keyframes animateNoteIn { 0% { opacity: 0; } 100% { opacity: 1; } }
-@keyframes animateNoteOut { 0% { opacity: 1; } 100% { opacity: 0; } }
