--- a/styles/outro.css
+++ b/styles/outro.css
@@ -70,39 +70,27 @@
         letter-spacing: 0.4em;
     }
 }
+
+#heart
+{
+	opacity: 0;
+}
 .animateHeartIn
 {
-	animation-name: animateHeart, animateHeartBeat;
-	animation-delay: calc(var(--outro-zoom-out) - 1s), var(--outro-zoom-out); 
-	animation-duration: 0.5s, 1s;
+	animation-name: animFadeIn, animateHeartBeat;
+	animation-delay: calc(var(--outro-zoom-out) - 2s), var(--outro-zoom-out); 
+	animation-duration: 1.5s, 1s;
 	animation-iteration-count: 1, infinite;
 	animation-timing-function: ease, ease;
 	animation-fill-mode: forwards, none;
 }
 .animateHeartOut
 {
-	animation-name: animateHeart;
+	animation-name: animFadeOut;
 	animation-delay: 0;
-	animation-duration: 1s;
+	animation-duration: 0.5s;
 	animation-iteration-count: 1;
-	animation-direction: reverse;
-	animation-fill-mode: none;
-}
-@keyframes animateHeart {
-    0%
-	{
-		filter: invert(0) sepia(0) saturate(1) hue-rotate(0);
-    }
-
-    50%
-	{
-		filter: invert(0.5) sepia(1) saturate(1) hue-rotate(-20deg);
-    }
-	
-    100%
-	{
-		filter: invert(0.5) sepia(1) saturate(50) hue-rotate(-20deg) drop-shadow(0 0 40px rgba(255, 0, 0, 0.5));
-    }
+	animation-fill-mode: forwards;
 }
 
 @keyframes animateHeartBeat {
