--- a/styles/game.css
+++ b/styles/game.css
@@ -12,12 +12,12 @@
 	fill-opacity: 0.9;
 	stroke: rgb(207, 119, 255);
 	stroke-width: 4px;
-	animation-name: animatetutorialViewTouch;
+	animation-name: animtutorialViewTouch;
 	animation-duration: 2.5s;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease;
 }
-@keyframes animatetutorialViewTouch
+@keyframes animtutorialViewTouch
 {
     0%
 	{
@@ -49,15 +49,15 @@
 	}
 }
 
-.animateTutorialView
+.animTutorialView
 {
-	animation-name: animateTutorialView;
+	animation-name: animTutorialView;
 	animation-duration: 1s;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease;
 	animation-direction: alternate;
 }
-@keyframes animateTutorialView
+@keyframes animTutorialView
 {
     0% { transform: translate(0, 0); }
     100% { transform: translate(0, 30px); }
@@ -72,16 +72,16 @@
 	stroke-width: 0.04;
 	stroke-opacity: 0.3;
 }
-.animateTutorialTarget
+.animTutorialTarget
 {
-	animation-name: animateTutorialTarget;
+	animation-name: animTutorialTarget;
 	animation-duration: 1.5s;
 	animation-iteration-count: infinite;
 	animation-timing-function: ease-out;
 
 	transform-origin: 0.025% 0.045%;
 }
-@keyframes animateTutorialTarget
+@keyframes animTutorialTarget
 {
     0%
 	{
