--- a/styles/game.css
+++ b/styles/game.css
@@ -9,6 +9,16 @@
 	font-size: 100%;
 }
 
+#grid
+{
+	stroke: rgb(207, 119, 255);
+	stroke-width: 0.01;
+	/* stroke-dasharray: 0.3 0.7;
+	stroke-dashoffset: 0.15; */
+	opacity: 0.5;
+    filter: drop-shadow(0 0 5px rgb(207, 119, 255));
+}
+
 #tutorialViewTouch
 {
 	fill: rgb(207, 119, 255);
@@ -36,18 +46,18 @@
 	{
         transform: translate(0, 0);
 		opacity: 0.5;
-		r: 30px;
+		r: 20px;
     }
     90%
 	{
         transform: translate(0, -130px);
 		opacity: 0.5;
-		r: 30px;
+		r: 20px;
     }
     100%
 	{
         transform: translate(0, -130px);
-		r: 20px;
+		r: 0;
 		opacity: 0;
 	}
 }
@@ -73,7 +83,7 @@
 
 	stroke: rgb(207, 119, 255);
 	stroke-width: 0.04;
-	stroke-opacity: 0.3;
+	stroke-opacity: 0.5;
 }
 .animTileHintDelayed
 {
