--- a/styles/game.css
+++ b/styles/game.css
@@ -11,19 +11,19 @@
 
 #grid
 {
-	stroke: rgb(207, 119, 255);
+	stroke: var(--color-highlight);
 	stroke-width: 0.01;
 	/* stroke-dasharray: 0.3 0.7;
 	stroke-dashoffset: 0.15; */
 	opacity: 0.5;
-    filter: drop-shadow(0 0 5px rgb(207, 119, 255));
+    filter: drop-shadow(0 0 5px var(--color-highlight));
 }
 
 #tutorialViewTouch
 {
-	fill: rgb(207, 119, 255);
+	fill: var(--color-highlight);
 	fill-opacity: 0.9;
-	stroke: rgb(207, 119, 255);
+	stroke: var(--color-highlight);
 	stroke-width: 4px;
 	animation-name: animtutorialViewTouch;
 	animation-duration: 2.5s;
@@ -78,10 +78,10 @@
 
 #tileHint
 {
-	fill: rgb(207, 119, 255);
+	fill: var(--color-highlight);
 	fill-opacity: 0.05;
 
-	stroke: rgb(207, 119, 255);
+	stroke: var(--color-highlight);
 	stroke-width: 0.04;
 	stroke-opacity: 0.5;
 }
