--- a/styles/outro.css
+++ b/styles/outro.css
@@ -101,9 +101,9 @@
 
 .animTilesIn
 {
-	animation: animFadeIn 0.2s ease forwards;
+	animation: animFadeIn 0.2s ease;
 }
 .animTilesOut
 {
-	animation: animFadeOut 0.2s calc(var(--outro-zoom-out)) ease forwards;
+	animation: animFadeOut 1s calc(var(--outro-zoom-out) - 1.5s) ease forwards;
 }
