--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,11 +1,53 @@
+#languageBox
+{
+	position: absolute;
+	left: 50%;
+	top: 2em;
+	transform: translate(-50%, -50%);
+
+	font-family: "Roboto Slab", serif;
+	text-wrap: nowrap;
+}
+
+#languageBox button
+{
+	text-decoration: none;
+	margin-left: 0.2em;
+	margin-right: 0.2em;
+	padding: 0.5em;
+	padding-left: 0.8em;
+	padding-right: 0.8em;
+
+	/* background: linear-gradient(var(--color-light) 0%, rgba(0, 0, 0, 0) 100%); */
+	color: var(--color-highlight);
+	border: 1px solid var(--color-light);
+	border-radius: 0.6em;
+	background: none;
+
+	font-family: "Roboto Slab", serif;
+}
+#languageBox button:hover, #languageBox button:disabled
+{
+	background-color: var(--color-highlight);
+	color: var(--color-dark);
+}
+#languageBox button:enabled
+{
+	cursor: pointer;
+}
+#languageBox button:disabled
+{
+	pointer-events: none;
+}
+
 #introBox
 {
 	position: absolute;
-	top: 40vh;
 	left: 50%;
+	top: 40vh;
 	transform: translate(-50%, -50%);
 	width: 95%;
-	font-family: "Roboto Slab", sans-serif;
+	font-family: "Roboto Slab", serif;
 	color: white;
 	text-align: center;
 }
@@ -34,6 +76,11 @@
 	margin-bottom: 5vh;
 }
 
+#play em
+{
+	opacity: 0.5;
+}
+
 #introBox button
 {
 	margin-top: 5vh;
@@ -44,7 +91,6 @@
 	font-family: Nunito, sans-serif;
 	font-size: min(200%, 5vh);
 	font-weight: bold;
-	color: rgb(119, 114, 100);
 	border-radius: min(20px, 3vh);
 	border: none;
 }
@@ -52,13 +98,22 @@
 #introBox button:disabled
 {
 	background-color: rgba(255, 255, 255, 0.3);
+	color: var(--color-dark);
 }
 
 #introBox button:enabled
 {
-	background-color: white;
+	/* background: linear-gradient(rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.4) 100%); */
 	cursor: pointer;
+	color: white;
 	animation: animPulseButton 3s ease infinite;
+	border: 0.4vh solid white;
+	background: none;
+}
+#introBox button:hover
+{
+	background-color: white;
+	color: var(--color-dark);
 }
 @keyframes animPulseButton
 {
@@ -72,7 +127,7 @@
 	margin: auto;
 	margin-top: 1.4em;
 	padding: 10px;
-	font-family: "Roboto Slab", sans-serif;
+	font-family: "Roboto Slab", serif;
 	text-align: center;
 	color: black;
 	background-color: orange;
@@ -86,9 +141,9 @@
 
 #loadingText, #playText
 {
-	font-family: "Roboto Slab", sans-serif;
+	font-family: "Roboto Slab", serif;
 	text-align: center;
-	color: var(--color-dark);
+	/* color: var(--color-dark); */
 }
 
 /* https://www.w3schools.com/howto/howto_css_loader.asp */
